@@ -7,25 +7,26 @@ import de.turingStack.analyse.abstraction.scanner.TokenCategory;
 import de.turingStack.languageFeatures.RegisterProvider;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class DeleteRegister extends Command {
 
-  public DeleteRegister() {
-    super("deleteRegister", Arrays.asList(
-        Arrays.asList(TokenCategory.KEYWORD, TokenCategory.NAME, TokenCategory.LINEBREAK)));
-  }
+    public DeleteRegister() {
+        super("deleteRegister", List.of(
+                Arrays.asList(TokenCategory.KEYWORD, TokenCategory.NAME, TokenCategory.LINEBREAK)));
+    }
 
-  @Override
-  public void execute(CommandLine commandLine) {
-    commandLine.getFirstOf(TokenCategory.KEYWORD).ifPresent(token -> {
-      if (!token.content().equals(this.getName())) {
-        return;
-      }
-      commandLine
-          .getFirstOf(TokenCategory.NAME)
-          .stream()
-          .map(Token::content)
-          .forEach(RegisterProvider::deleteRegister);
-    });
-  }
+    @Override
+    public void execute(CommandLine commandLine) {
+        commandLine.getFirstOf(TokenCategory.KEYWORD).ifPresent(token -> {
+            if (!token.content().equals(this.getName())) {
+                return;
+            }
+            commandLine
+                    .getFirstOf(TokenCategory.NAME)
+                    .stream()
+                    .map(Token::content)
+                    .forEach(RegisterProvider::deleteRegister);
+        });
+    }
 }
